add instructions to locally run a nightwatch test suite
refs #2507

--- a/package.json
+++ b/package.json
@@ -170,7 +170,9 @@
     "koa-webpack-dev-middleware": "1.4.6",
     "koa-webpack-hot-middleware": "1.0.3",
     "lint-staged": "6.0.0",
+    "nightwatch": "0.9.19",
     "node-watch": "0.5.5",
+    "phantomjs-prebuilt": "2.1.16",
     "prettier": "1.8.2",
     "react-addons-perf": "15.4.2",
     "react-addons-test-utils": "15.4.2",
